--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
   "name": "djsify",
   "version": "1.6.4",
+  "repository": {
+    "directory": ".",
+    "type": "git",
+    "url": "https://github.com/goataso/djsify.git"
+  },
+  "author": {
+    "email": "goat@viallance.com",
+    "name": "goataso",
+    "url": "https://github.com/goataso"
+  },
+  "license": "MIT",
+  "description": "A Discord bot framework for Discord.js",
   "main": "dist/cjs/index.cjs",
   "module": "dist/esm/index.mjs",
   "types": "dist/types/index.d.ts",
