--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "djsify",
-  "version": "1.6.6",
+  "version": "1.7.0",
   "repository": {
     "directory": ".",
     "type": "git",
@@ -60,13 +60,16 @@
   },
   "dependencies": {
     "commander": "^12.1.0",
-    "discord.js": "^14.16.3",
+    "discord.js": "^14.18.0",
     "dotenv": "^16.4.5",
     "inquirer": "^12.4.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.21.0",
     "@types/inquirer": "^9.0.7",
-    "@types/node": "^16.0.0",
+    "@types/node": "^22.13.8",
+    "eslint": "^9.21.0",
+    "globals": "^16.0.0",
     "rimraf": "^5.0.5",
     "typescript": "^5.6.3"
   }
