Add all package files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,8 +33,9 @@
     "allowSyntheticDefaultImports": true
   },
   "include": [
-    "src/**/*"
-, "index.d.ts"  ],
+    "src/**/*",
+    "index.d.ts"
+  ],
   "exclude": [
     "node_modules",
     "dist",
